# sophus-release

./: 0001-Disable-building-tests-and-examples.patch  0001-Don-t-build-testing-or-examples-on-the-buildfarm.patch  CMakeLists.txt  README.md  SophusConfig.cmake.in  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules  rules.em
rpm/: ros-humble-sophus.spec  ros-iron-sophus.spec  ros-jazzy-sophus.spec  ros-kilted-sophus.spec  ros-rolling-sophus.spec  template.spec  template.spec.em
sophus/: common.hpp  se2.hpp  se3.hpp  so3.hpp
test/ceres/: tests.hpp
